--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2792,7 +2792,7 @@ input[type="button"]:disabled,
 #main {
   margin-left: 35%;
   max-width: 54em;
-  padding: 8em 4em 4em 4em;
+  padding: 8em 4em 0em 4em;
   width: calc(100% - 35%);
 }
 
@@ -3211,6 +3211,10 @@ body.is-touch .poptrox-popup .closer {
 
   #footer .icons {
     margin: 0 0 1em 0;
+  }
+
+  .copy {
+    margin: 0 0 0 0 !important;
   }
 
   #footer .copyright {
