--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -110,6 +110,23 @@ section {
   display: block;
 }
 
+.about-p > p {
+  margin: 0 0 1em 0;
+}
+
+.m-left {
+  margin-left: 5em;
+}
+
+#btn-main-color {
+  background:#8fce83 !important;
+  color: #0e140d !important;
+}
+
+#btn-main-color:hover {
+  color: #f4f4f4 !important;
+}
+
 body {
   line-height: 1;
 }
@@ -193,7 +210,7 @@ body,
 input,
 select,
 textarea {
-  color: #a2a2a2;
+  color: #282828;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 16pt;
   font-weight: 400;
