--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,13 +118,26 @@ section {
   margin-left: 5em;
 }
 
+#full {
+  width: 100vw;
+}
+
 #btn-main-color {
-  background:#8fce83 !important;
+  background: #8fce83 !important;
   color: #0e140d !important;
 }
 
 #btn-main-color:hover {
   color: #f4f4f4 !important;
+}
+
+#main-h2 {
+  margin: 0 0 0.3em 0;
+}
+
+.good {
+  margin: 3em 0 0.3em 1em!important;
+}
 }
 
 body {
@@ -608,7 +621,7 @@ pre code {
 }
 
 .row > * {
-  padding: 0 0 0 2.5em;
+  padding: 0 0 0 0;
 }
 
 .row.gtr-uniform {
@@ -2807,16 +2820,12 @@ input[type="button"]:disabled,
 /* Main */
 
 #main {
-  margin-left: 35%;
-  max-width: 54em;
-  padding: 8em 4em 0em 4em;
-  width: calc(100% - 35%);
 }
 
 #main > section {
   border-top: solid 2px #efefef;
   margin: 4em 0 0 0;
-  padding: 4em 0 0 0;
+  padding: 0 0 0 0;
 }
 
 #main > section:first-child {
