--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -468,12 +468,15 @@ pre code {
   justify-content: flex-start;
 }
 
-.row.aln-center {
-  justify-content: center;
+.aln-center-flex {
   display: flex; /* Initiates Flexbox layout */
   flex-direction: column; /* Stacks children vertically */
   align-items: center; /* Centers children horizontally in the container */
   justify-content: space-around; /* Distributes space evenly between children */
+}
+
+.row.aln-center {
+  justify-content: center;
 }
 
 .row.aln-right {
@@ -3518,7 +3521,16 @@ html {
   color: #0b130b !important;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 13pt;
-  margin-left: auto;
+}
+
+#margin-first-buttons {
+  border-radius: 25px !important;
+  /* border: 2px solid #000000; */
+  background: #6fbf73 !important;
+  color: #0b130b !important;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 13pt;
+  margin-left: auto !important;
 }
 
 @media (max-width: 736px) {
