--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -17,6 +17,7 @@
   .modal-content {
     background-color: #fefefe;
     margin: 15% auto;
+    margin-top: 100px;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
