--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,13 @@ section {
 }
 
 #full {
-  width: 100%;
+  width: 100vw;
+  align-items: center;
+  display: flex; /* Initiates Flexbox layout */
+  flex-direction: column; /* Stacks children vertically */
+  align-items: center; /* Centers children horizontally in the container */
+  justify-content: space-around; /* Distributes space evenly between children */
+  text-align: center;
 }
 
 /* Media query for screens smaller than 640px */
@@ -136,6 +142,7 @@ section {
     flex-direction: column; /* Stacks children vertically */
     align-items: center; /* Centers children horizontally in the container */
     justify-content: space-around; /* Distributes space evenly between children */
+    text-align: center;
   }
 }
 
@@ -151,6 +158,7 @@ section {
 #main-h2 {
   margin: 0 0 0.3em 0;
   min-width: 635px; /* Default min-width for larger screens */
+  line-height: normal;
 }
 
 /* Media query for screens smaller than 640px */
@@ -468,12 +476,12 @@ pre code {
   justify-content: flex-start;
 }
 
-.aln-center-flex {
+/* .aln-center-flex {
   display: flex; /* Initiates Flexbox layout */
   flex-direction: column; /* Stacks children vertically */
   align-items: center; /* Centers children horizontally in the container */
   justify-content: space-around; /* Distributes space evenly between children */
-}
+} */
 
 .row.aln-center {
   justify-content: center;
@@ -648,7 +656,7 @@ pre code {
 
 .row {
   margin-top: 0;
-  margin-left: -2.5em;
+  /* margin-left: -2.5em; */
 }
 
 .row > * {
@@ -890,11 +898,11 @@ pre code {
 
   .row {
     margin-top: 0;
-    margin-left: -2.5em;
+    /* margin-left: -2.5em; */
   }
 
   .row > * {
-    padding: 0 0 0 2.5em;
+    padding: 0;
   }
 
   .row.gtr-uniform {
@@ -1116,7 +1124,6 @@ pre code {
 
   .row.gtr-50 {
     margin-top: 0;
-    margin-left: -1em;
   }
 
   .row.gtr-50 > * {
@@ -1137,7 +1144,7 @@ pre code {
   }
 
   .row > * {
-    padding: 0 0 0 2em;
+    padding: 0 0 0 1em;
   }
 
   .row.gtr-uniform {
@@ -1359,7 +1366,7 @@ pre code {
 
   .row.gtr-50 {
     margin-top: 0;
-    margin-left: -1em;
+    /* margin-left: -1em; */
   }
 
   .row.gtr-50 > * {
@@ -1380,7 +1387,7 @@ pre code {
   }
 
   .row > * {
-    padding: 0 0 0 2em;
+    padding: 0 0 0 1em;
   }
 
   .row.gtr-uniform {
@@ -1623,7 +1630,7 @@ pre code {
   }
 
   .row > * {
-    padding: 0 0 0 1.5em;
+    /* padding: 0 0 0 1.5em; */
   }
 
   .row.gtr-uniform {
@@ -1675,10 +1682,15 @@ pre code {
   }
 }
 
-@media screen and (max-width: 1000px) {
-  #main {
-    margin-left: 15% !important;
-  }
+@media screen and (max-width: 980px) {
+    #main {
+      margin-left: 0% !important;
+            display: flex !important;
+            align-content: center !important;
+            flex-wrap: wrap !important;
+            justify-content: center !important;
+            padding: 2.25em 2.5em 0.25em 2.5em;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -1878,7 +1890,7 @@ pre code {
   }
 
   .row > * {
-    padding: 0 0 0 1.5em;
+    /* padding: 0 0 0 1.5em; */
   }
 
   .row.gtr-uniform {
@@ -2421,12 +2433,11 @@ ul.actions {
   display: flex;
   cursor: default;
   list-style: none;
-  margin-left: -1em;
+  /* margin-left: -1em; */
   padding-left: 0;
 }
 
 ul.actions li {
-  padding: 0 0 0 1em;
   vertical-align: middle;
 }
 
@@ -3205,7 +3216,6 @@ body.is-touch .poptrox-popup .closer {
     margin-left: 30%;
     max-width: none;
     padding: 6em 3em 3em 3em;
-    width: calc(100% - 30%);
   }
 }
 
@@ -3357,12 +3367,6 @@ body.is-touch .poptrox-popup .closer {
     padding: 2.25em 1.5em 0.25em 1.5em;
   }
 
-  @media screen and (max-width: 736px) {
-    #main {
-      margin-left: 15% !important;
-    }
-  }
-
   #main > section {
     margin: 2.25em 0 0 0;
     padding: 2.25em 0 0 0;
@@ -3408,7 +3412,6 @@ body.is-touch .poptrox-popup .closer {
 
 #nav {
   background-color: #282828;
-  text-align: center;
   position: fixed;
   left: 0;
   top: 0;
@@ -3417,12 +3420,15 @@ body.is-touch .poptrox-popup .closer {
   cursor: default;
   height: 3.5em;
   line-height: 3.5em;
+  display:flex;
+  justify-content: center;
 }
 
 #nav ul {
   margin-bottom: 0;
   list-style: none;
   padding-left: 0;
+  margin-left: 30%;
 }
 
 #nav li {
@@ -3622,4 +3628,8 @@ html {
 
 .modern-button:hover {
   opacity: 0.9;
+}
+
+.contact {
+  padding: 0 6rem !important;
 }
