--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 /*
 	Strata by HTML5 UP
@@ -3519,11 +3520,20 @@ html {
   color: ;
 } */
 
+#rounded:hover {
+  border-radius: 25px !important;
+  /* border: 2px solid #000000; */
+  background: hsl(90, 66.7%, 1.2%, 90%) !important;
+  color: #f7f7f7 !important;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 13pt;
+}
+
 #rounded {
   border-radius: 25px !important;
   /* border: 2px solid #000000; */
-  background: #6fbf73 !important;
-  color: #0b130b !important;
+  background: #405940 !important;
+  color: #f7f7f7 !important;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 13pt;
 }
@@ -3531,8 +3541,17 @@ html {
 #margin-first-buttons {
   border-radius: 25px !important;
   /* border: 2px solid #000000; */
-  background: #6fbf73 !important;
-  color: #0b130b !important;
+  background: hsl(90, 66.7%, 1.2%, 90%) !important;
+  color: #f7f7f7 !important;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 13pt;
+  margin-left: auto !important;
+}
+
+#margin-first-buttons:hover {
+  border-radius: 25px !important;
+  background: #f7f7f7 !important;
+  color: black !important;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-size: 13pt;
   margin-left: auto !important;
@@ -3631,4 +3650,21 @@ html {
 
 .contact {
   padding: 0 6rem !important;
+}
+
+html {
+  font-family: "Inter", ui-sans-serif, sans-serif;
+}
+
+#color-effect{
+  background: linear-gradient(120deg, #6b8f67, #282828);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.button:hover {
+  background-color: #405940 !important;
+  border-color: #405940 !important;
+  color: hsl(90, 66.7%, 1.2%, 90%) !important;
 }
