--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -288,7 +288,7 @@ a:hover {
 
 /* strong,
 b {
-  color: #787878;
+  color: #4F4F4F;
   font-weight: 400;
 } */
 
@@ -307,7 +307,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #787878;
+  color: #4F4F4F;
   font-weight: 400;
   line-height: 1em;
   margin: 0 0 1em 0;
@@ -1986,7 +1986,7 @@ form {
 }
 
 label {
-  color: #787878;
+  color: #4F4F4F;
   display: block;
   font-size: 0.9em;
   font-weight: 400;
@@ -2040,7 +2040,7 @@ select {
 }
 
 select option {
-  color: #787878;
+  color: #4F4F4F;
   background: #fff;
 }
 
@@ -2123,8 +2123,8 @@ input[type="radio"] + label:before {
 
 input[type="checkbox"]:checked + label:before,
 input[type="radio"]:checked + label:before {
-  background: #787878;
-  border-color: #787878;
+  background: #4F4F4F;
+  border-color: #4F4F4F;
   color: #fff;
   content: "\f00c";
 }
@@ -2570,7 +2570,7 @@ table td {
 }
 
 table th {
-  color: #787878;
+  color: #4F4F4F;
   font-size: 0.9em;
   font-weight: 400;
   padding: 0 0.75em 0.75em 0.75em;
@@ -2632,7 +2632,7 @@ input[type="button"],
   background-color: transparent;
   border-radius: 0.35em;
   border: solid 3px #efefef;
-  color: #787878 !important;
+  color: #4F4F4F !important;
   cursor: pointer;
   display: inline-block;
   font-weight: 400;
