added Japanese translation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -484,12 +484,12 @@ pre code {
   justify-content: flex-start;
 }
 
-/* .aln-center-flex {
-  display: flex; /* Initiates Flexbox layout */
-  flex-direction: column; /* Stacks children vertically */
-  align-items: center; /* Centers children horizontally in the container */
-  justify-content: space-around; /* Distributes space evenly between children */
-} */
+.aln-center-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
 
 .row.aln-center {
   justify-content: center;
@@ -2870,6 +2870,22 @@ input[type="button"]:disabled,
 
 #footer .copyright li a {
   color: inherit;
+}
+
+/* Language Button */
+.lang-button {
+  background: none;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1em;
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  transition: background-color 0.2s;
+}
+
+.lang-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* Main */
