--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 /*
 	Strata by HTML5 UP
@@ -307,7 +307,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #4F4F4F;
+  color: #4f4f4f;
   font-weight: 400;
   line-height: 1em;
   margin: 0 0 1em 0;
@@ -1686,14 +1686,14 @@ pre code {
 }
 
 @media screen and (max-width: 980px) {
-    #main {
-      margin-left: 0% !important;
-            display: flex !important;
-            align-content: center !important;
-            flex-wrap: wrap !important;
-            justify-content: center !important;
-            padding: 2.25em 2.5em 0.25em 2.5em;
-    }
+  #main {
+    margin-left: 0% !important;
+    display: flex !important;
+    align-content: center !important;
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+    padding: 2.25em 2.5em 0.25em 2.5em;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -1986,7 +1986,7 @@ form {
 }
 
 label {
-  color: #4F4F4F;
+  color: #4f4f4f;
   display: block;
   font-size: 0.9em;
   font-weight: 400;
@@ -2040,7 +2040,7 @@ select {
 }
 
 select option {
-  color: #4F4F4F;
+  color: #4f4f4f;
   background: #fff;
 }
 
@@ -2123,8 +2123,8 @@ input[type="radio"] + label:before {
 
 input[type="checkbox"]:checked + label:before,
 input[type="radio"]:checked + label:before {
-  background: #4F4F4F;
-  border-color: #4F4F4F;
+  background: #4f4f4f;
+  border-color: #4f4f4f;
   color: #fff;
   content: "\f00c";
 }
@@ -2570,7 +2570,7 @@ table td {
 }
 
 table th {
-  color: #4F4F4F;
+  color: #4f4f4f;
   font-size: 0.9em;
   font-weight: 400;
   padding: 0 0.75em 0.75em 0.75em;
@@ -2632,7 +2632,7 @@ input[type="button"],
   background-color: transparent;
   border-radius: 0.35em;
   border: solid 3px #efefef;
-  color: #4F4F4F !important;
+  color: #4f4f4f !important;
   cursor: pointer;
   display: inline-block;
   font-weight: 400;
@@ -3436,7 +3436,7 @@ body.is-touch .poptrox-popup .closer {
   cursor: default;
   height: 3.5em;
   line-height: 3.5em;
-  display:flex;
+  display: flex;
   justify-content: center;
 }
 
@@ -3672,7 +3672,7 @@ html {
   font-family: "Inter", ui-sans-serif, sans-serif;
 }
 
-#color-effect{
+#color-effect {
   background: linear-gradient(120deg, #6b8f67, #282828);
   background-clip: text;
   -webkit-background-clip: text;
@@ -3683,4 +3683,161 @@ html {
   background-color: #405940 !important;
   border-color: #405940 !important;
   color: hsl(90, 66.7%, 1.2%, 90%) !important;
+}
+
+.anim750 {
+  transition: all 750ms ease-in-out;
+}
+
+
+
+#Awesome {
+  width: 60px;
+  height: 60px;
+  margin: 0 auto;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 8px;
+  left: -7px;
+  z-index: 10;
+  font-size:10px;
+}
+
+#Awesome .sticky {
+  transform: rotate(-45deg);
+}
+
+#Awesome:hover .sticky {
+  transform: rotate(-45deg);
+}
+
+#Awesome .sticky {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 90px;
+  height: 90px;
+}
+
+#Awesome .reveal .square {
+  box-shadow: 0 1px 0px rgba(0, 0, 0, 0.15);
+  font-family: "helvetica neue", arial;
+  font-weight: 200;
+  text-align: center;
+  cursor: pointer;
+}
+
+#Awesome .reveal .square {
+  background: #fafafa;
+}
+
+#Awesome .square_wrapper {
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  left: 0px;
+  top: 0px;
+  overflow: hidden;
+}
+
+#Awesome .square {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  margin: 20px; /* Adjusted for square alignment */
+}
+
+#Awesome .back {
+  height: 10px;
+  top: 30px;
+}
+
+#Awesome:hover .back {
+  height: 5px;
+  top: 15px;
+}
+
+#Awesome .back .square {
+  margin-top: calc(-100% + 5px);;
+  background-color: #fbec3f;
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgba(251, 236, 63, 0),
+    rgba(255, 255, 255, 0.8)
+  );
+}
+
+#Awesome:hover .back .square {
+  margin-top: calc(-50% + 5px);
+}
+
+#Awesome .front {
+  height: calc(100% - 10px);;
+  bottom: 0;
+  top: auto;
+  -webkit-box-shadow: 0 calc(-100% + 10px) 10px calc(-100% + 10px) rgba(0,0,0,.3);
+}
+
+#Awesome:hover .front {
+  height: 70px;
+  height: calc(50% - 10px); /* Adjust based on new size */
+}
+
+#Awesome .front .square {
+  margin-top: -10px;
+  background: #fbec3f;
+  background-image: -webkit-linear-gradient(
+    bottom,
+    rgba(251, 236, 63, 0) 75%,
+    #f7bb37 95%
+  );
+  background-image: -moz-linear-gradient(
+    bottom,
+    rgba(251, 236, 63, 0) 75%,
+    #f7bb37 95%
+  );
+  background-image: linear-gradient(
+    bottom,
+    rgba(251, 236, 63, 0) 75%,
+    #f7bb37 95%
+  );
+}
+
+
+
+#Awesome h4 {
+  font-family: "helvetica neue", arial;
+  font-weight: 400;
+  text-align: center;
+  position: absolute;
+  width: 160px;
+  height: 120px;
+  line-height: 1.2;
+  padding: 10px;
+  top: 98%;
+  left: 89%;
+  transform: translate(-50%, -50%);
+  transition: opacity 1600ms ease-in;
+  font-size: 10px;
+  word-wrap: break-word;
+  color: #333;
+}
+
+#Awesome:hover h4 {
+  opacity: 0;
+  transition: opacity 300ms ease-out; /* Faster fade-out */
+}
+
+#Awesome:hover .front .square {
+  margin-top: -90px;
+  background-color: #e2d439;
+  background-position: 0 100px;
+}
+
+.sticker-h4 {
+  margin-top: 10px;
+}
+
+.padding-left-10{
+  padding-left: 10px;
 }
